--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,17 @@ repositories {
         url = 'http://repo.maven.apache.org/maven2'
     }
 
+    maven {
+        url = "https://jitpack.io"
+    }
+
 
 }
 
 dependencies {
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.4-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot-api:1.16.2-R0.1-SNAPSHOT'
+    compileOnly 'com.github.MilkBowl:VaultAPI-1.7'
 }
 
 group = 'io.github.EddieDiamondFire'
