--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ plugins {
     id 'maven-publish'
 }
 
+task generateJavadocs(type: Javadoc){
+    source = sourceSets.main.allJava
+}
 repositories {
     mavenLocal()
     mavenCentral()
@@ -40,7 +43,6 @@ repositories {
 dependencies {
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.4-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot-api:1.16.2-R0.1-SNAPSHOT'
-    compileOnly 'com.github.MilkBowl:VaultAPI-1.7'
 }
 
 group = 'io.github.EddieDiamondFire'
