--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ hs_err_pid*
 .idea/uiDesigner.xml
 .idea/vcs.xml
 .idea/workspace.xml
+CustomNEnchanting/build
+CustomNEnchanting-api/build
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+*.bin
