Update .gitignore again

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ CustomNEnchanting/build
 CustomNEnchanting-api/build
 .gradle/buildOutputCleanup/buildOutputCleanup.lock
 *.bin
+.gradle/6.7.1
+.gradle/buildOutputCleanup
+.gradle/checksums
+.gradle/configuration-cache
+.gradle/vcs-1
