--- a/CustomNEnchanting/build.gradle
+++ b/CustomNEnchanting/build.gradle
@@ -6,7 +6,15 @@ repositories{
     maven {
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
+    maven{
+        url = "https://repo.dmulloy2.net/nexus/repository/public/"
+    }
+    maven{
+        url = 'https://jitpack.io'
+    }
 }
 dependencies{
     implementation 'org.spigotmc:spigot-api:1.16.4-R0.1-SNAPSHOT'
+    implementation 'com.comphenix.protocol:ProtocolLib:4.5.0'
+    implementation 'com.github.milkbowl:VaultAPI:1.7'
 }
