--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext{
-        dependencyManagerVersion = '1.0.10.RELEASE'
+        dependencyManagerVersion = '1.0.10.RELEASE' as Object
     }
     repositories {
         mavenCentral()
@@ -10,6 +10,7 @@ buildscript {
     }
 
     dependencies{
+        classpath("io.freefair.gradle:lombok-plugin:5.3.0")
         classpath("io.spring.gradle:dependency-management-plugin:${dependencyManagerVersion}")
     }
 }
@@ -30,6 +31,7 @@ subprojects{
     apply plugin: 'java'
     apply plugin: 'idea'
     apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'io.freefair.lombok'
 
     ext {
         SLF4J_API_VERSION = '1.7.30'
