--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext{
-        dependencyManagerVersion = '1.0.10.RELEASE' as Object
+        KOTLIN_VERSION = '1.4.32'
+        SHADOWJAR_VERSION = '6.1.0'
     }
     repositories {
         mavenCentral()
@@ -10,14 +11,12 @@ buildscript {
     }
 
     dependencies{
-        classpath("io.freefair.gradle:lombok-plugin:5.3.0")
-        classpath("io.spring.gradle:dependency-management-plugin:${dependencyManagerVersion}")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${KOTLIN_VERSION}"
+        classpath "com.github.jengelman.gradle.plugins:shadow:${SHADOWJAR_VERSION}"
     }
 }
 
 allprojects{
-
-    // You can modify this
     group = 'io.github.eddiediamondfire'
     version = '1.0-SNAPSHOT'
 }
@@ -29,26 +28,18 @@ subprojects{
     }
 
     apply plugin: 'java'
+    apply plugin: 'org.jetbrains.kotlin.jvm'
     apply plugin: 'idea'
-    apply plugin: 'io.spring.dependency-management'
-    apply plugin: 'io.freefair.lombok'
+    apply plugin: 'kotlin-kapt'
+    apply plugin: 'com.github.johnrengelman.shadow'
+
 
     ext {
-        SLF4J_API_VERSION = '1.7.30'
-        SLF4J_Log4j12_VERSION = '1.7.30'
-        mavenBomVersion = '2.3.4.RELEASE'
         JUNIT_VERSION = '4.13'
     }
 
-    dependencyManagement {
-        imports{
-            mavenBom 'org.springframework.boot:spring-boot-starter-parent:2.3.4.RELEASE'
-        }
-    }
-
     dependencies{
-        compile "org.slf4j:slf4j-api:${SLF4J_API_VERSION}"
-        compile "org.slf4j:slf4j-log4j12:${SLF4J_Log4j12_VERSION}"
+        implementation "org.jetbrains.kotlin:kotlin-stdlib:${KOTLIN_VERSION}"
         testCompile "junit:junit:${JUNIT_VERSION}"
     }
 }
